force-app/main/default/objects/AI_Grounding_Source__mdt/AI_Grounding_Source__mdt.object-meta.xml
<CustomObject>
    <label>AI Grounding Source</label>
    <pluralLabel>AI Grounding Sources</pluralLabel>
</CustomObject>