force-app/main/default/objects/AI_Grounding_Source__mdt/fields/Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Field__c</fullName>
    <description
  >Field on Source_Object__c compared against the grounding lookup's related record for relevance (e.g. Customer_Account__c).</description>
    <label>Match Field</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>