force-app/main/default/objects/AI_Grounding_Source__mdt/fields/Max_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Results__c</fullName>
    <label>Max Results</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>