force-app/main/default/objects/AI_Grounding_Source__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>